tests/snapshots/docx/apache-tika/2pic.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Image { alt: Some("F:\\photo\\2009.03.08. Кошка\\P1040891.JPG"), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image1.jpeg", content_type: "image/jpeg", bytes: 416734, sha256: "a5f159f94681c474227491bc7ab70521b68faeacc2eeb249b7318f2778d5d6b0" } },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Image { alt: Some("F:\\photo\\2009.03.08. Кошка\\P1040893.JPG"), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image2.jpeg", content_type: "image/jpeg", bytes: 455436, sha256: "b577821f462fd7728f973ef607afb45121f2efa85a5343909ae1e5c3b1305ac5" } },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
