tests/snapshots/docx/apache-tika/EmbeddedDocument.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Let me see what happens if I insert a worksheet." }
       3: EndParagraph
       4: StartParagraph { alignment: None, id: None }
       5: EndParagraph
       6: StartParagraph { alignment: None, id: None }
       7: EndParagraph
       8: EndDocument
  ],
  terminal: Ok,
}
