tests/snapshots/docx/apache-tika/footnotes.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Eto ochen prostoy" },
    Text { content: " text so snoskoy" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
