tests/snapshots/docx/apache-tika/testAltChunkHTML.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: EndDocument
  ],
  terminal: Ok,
}
