tests/snapshots/docx/apache-tika/testAltChunkMHT.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    EndDocument,
  ],
  terminal: Ok,
}
