tests/snapshots/docx/apache-tika/testAttachedTemplate.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Document with external attached template" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
