tests/snapshots/docx/apache-tika/testComment.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Here is some " },
    Text { content: "text" },
    Text { content: "." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
